--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "flowbite": "^2.3.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
